--- a/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/css/style.css
+++ b/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/css/style.css
@@ -1,11 +1,48 @@
-﻿footer {
+﻿.footer {
     background-color: #ffffff;
     position: fixed;
     bottom: 0;
     width: 100%;
+    font-size: 18px;
+    text-align: center;
 }
 
 .navbar {
     background-color: #5B361F;
     color: white
+}
+
+.well {
+    background-color: #CEC636;
+}
+
+/* Style all font awesome icons */
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+}
+
+/* Add a hover effect */
+.fa:hover {
+        opacity: 0.7;
+}
+
+/* Facebook */
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+/* Twitter */
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+
+.fa-linkedin {
+    background: #007bb5;
+    color: white;
 }
