--- a/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/css/style.css
+++ b/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/css/style.css
@@ -18,6 +18,9 @@
     background-color: #CEC636;
 }
 
+.btn btn-primary btn-lg active {
+    background-color: #CEC636;
+}
 /* Style all font awesome icons */
 .fa {
     padding: 20px;
