--- a/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/css/style.css
+++ b/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/css/style.css
@@ -36,6 +36,16 @@
     -moz-appearance: none;
 }
 
+.blurb {
+    background-color: #CEC636;
+    color: white;
+    width: 100%;
+    border: 15px #CEC636;
+    padding: 50px;
+    margin-bottom: 10%;
+
+}
+
 .container text-center {
     margin-left: auto;
     margin-right: auto;
