--- a/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/css/style.css
+++ b/Ecobadge Website/Ecobadge Web Application Project (W3 Schools Template)/Ecobadge Web Application Project/wwwroot/css/style.css
@@ -46,6 +46,16 @@
 
 }
 
+.whiteblurb {
+    background-color: #ffffff;
+    color: white;
+    width: 100%;
+    border: 15px #ffffff;
+    padding: 50px;
+    margin-bottom: 10%;
+
+}
+
 .container text-center {
     margin-left: auto;
     margin-right: auto;
