--- a/Ecobadge Website revamped/Ecobadge Website/Pages/About_us.cshtml
+++ b/Ecobadge Website revamped/Ecobadge Website/Pages/About_us.cshtml
@@ -5,7 +5,7 @@
 }
 
 @section Styles {
-    <link href="@Url.Content("~/css/about_us.css")" rel="stylesheet" type="text/css" style="height:40%" />
+    <link href="@Url.Content("~/css/about_us.css")" rel="stylesheet" type="text/css"/>
 }
 
 
