--- a/Ecobadge Website revamped/Ecobadge Website/Pages/Login.cshtml
+++ b/Ecobadge Website revamped/Ecobadge Website/Pages/Login.cshtml
@@ -5,7 +5,7 @@
 }
 
 @section Styles {
-    <link href="@Url.Content("~/css/login.css")" rel="stylesheet" type="text/css" style="height:40%" />
+    <link href="@Url.Content("~/css/login.css")" rel="stylesheet" type="text/css" />
 }
 
 <div class="wrapper">
