--- a/Ecobadge Website/Ecobadge Website/Pages/Directory.cshtml
+++ b/Ecobadge Website/Ecobadge Website/Pages/Directory.cshtml
@@ -8,13 +8,20 @@
     <link href="@Url.Content("~/css/directory.css")" rel="stylesheet" type="text/css" />
 }
 
+@section Scripts{
+    <script src="https://unpkg.com/feather-icons"></script>
+    <script>
+        feather.replace()
+    </script>
+} 
+
 <div class="container-fluid wrapper">
 
     <div class="row">
 
-        <div class="col-12 text-container">
+        <div class="col-6 offset-3 text-container">
             <div class="row">
-                <div class="col-6">
+                <div class="col-5">
                     <div class="row">
                         <input class="form-check-input" type="checkbox" value="" id="plastic">
                             <label class="form-check-label" for="plastic">
@@ -41,17 +48,15 @@
                     </div>
                 </div>
 
-                <div class="col-6">
+                <div class="col-5">
                     <div class="dropdown py-1">
                         <button class="btn-block btn-success dropdown-toggle" type="button" data-toggle="dropdown">
                             Location
                             <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Plymouth</a></li>
-                            <li><a href="#">Exeter</a></li>
-                            <li><a href="#">Bristol</a></li>
-                        </ul>
+                        <div class="dropdown-menu" id="locations">
+
+                        </div>
                     </div>
 
                     <div class="dropdown py-1">
@@ -59,11 +64,8 @@
                             Cuisine
                             <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Burgers</a></li>
-                            <li><a href="#">Chicken</a></li>
-                            <li><a href="#">Pizza</a></li>
-                        </ul>
+                        <div class="dropdown-menu" id="cuisines">
+                        </div>
                     </div>
 
                     <div class="dropdown py-1">
@@ -71,14 +73,21 @@
                             Eco Badge Tier
                             <span class="caret"></span>
                         </button>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Platinum</a></li>
-                            <li><a href="#">Gold</a></li>
-                            <li><a href="#">Silver</a></li>
-                            <li><a href="#">Bronze</a></li>
-                        </ul>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Bronze</a>
+                            <a class="dropdown-item" href="#">Silver</a>
+                            <a class="dropdown-item" href="#">Gold</a>
+                            <a class="dropdown-item" href="#">Platinum</a>
+                        </div>
                     </div>
                 </div>
+
+                <div class="col-2">
+                    <button type="button" class="btn btn-primary btn-lg btn-block" style="display: block; width: 100%; height:100%;" >
+                        <i data-feather="refresh-cw"></i>
+                    </button>
+                </div>
+
             </div>
         </div>
     </div>
@@ -114,14 +123,38 @@
 
 
 <script>
-
     const element = document.getElementById("parent");
     element.classList.remove("container");
     element.classList.add("container-fluid");
 
-    fetchBookings();
+    const locations = [];
+    const cuisines = [];
 
-    async function fetchBookings() {
+    fetchCompanies().then(locationFilters);
+    fetchCuisines().then(cuisineFilters);
+
+    function locationFilters(){
+
+        locations.sort();
+
+        for(i=0; i<locations.length; i++){
+            var value = locations[i];
+            $("#locations").append(`<a class="dropdown-item" href="#">${value}</a>`);
+        }
+    }
+
+    function cuisineFilters(){
+
+        cuisines.sort();
+
+        for(i=0; i<cuisines.length; i++){
+            var value = cuisines[i];
+            $("#cuisines").append(`<a class="dropdown-item" href="#">${value}</a>`);
+            console.log(value);
+        }
+    }
+
+    async function fetchCompanies() {
 
         const url = "https://localhost:44393/api/companies";
         const raw = await fetch(url);
@@ -141,9 +174,26 @@
                 <td>${foodWasteCollectionScheme}</td>
                 <td>${localProduce}</td>
                 </tr>`);
-    });
 
+            if (!locations.includes(county)){
+                locations.push(county);
+            }
+        });
+    }
 
-}
+     async function fetchCuisines() {
+
+        const url = "https://localhost:44393/api/cuisines";
+        const raw = await fetch(url);
+
+        const data = await raw.json();
+
+        data.forEach(({ cuisineName }) => {
+
+            if (!cuisines.includes(cuisineName)){
+                cuisines.push(cuisineName);
+            }
+        });
+    }
 
 </script>
