--- a/Ecobadge Website/Ecobadge Website/Pages/Directory.cshtml
+++ b/Ecobadge Website/Ecobadge Website/Pages/Directory.cshtml
@@ -83,7 +83,7 @@
                 </div>
 
                 <div class="col-2">
-                    <button type="button" class="btn btn-primary btn-lg btn-block" style="display: block; width: 100%; height:100%;" >
+                    <button type="button" class="btn btn-primary btn-lg btn-block" style="display: block; width: 100%; height:100%;" onclick="applyFilters">
                         <i data-feather="refresh-cw"></i>
                     </button>
                 </div>
@@ -106,10 +106,10 @@
                         <th>Telephone</th>
                         <th>Tier</th>
                         <th>Cuisines</th>
-                        <th>Vegan friendly</th>
-                        <th>Doesn't use single use plastic</th>
-                        <th>Foodwaste collection scheme</th>
-                        <th>Local produce</th>
+                        <th style="text-align:center">Vegan friendly</th>
+                        <th style="text-align:center">Doesn't use single use plastic</th>
+                        <th style="text-align:center">Foodwaste collection scheme</th>
+                        <th style="text-align:center">Local produce</th>
                     </tr>
                 </thead>
 
@@ -135,6 +135,10 @@
         locationFilters();
         cuisineFilters();
     })
+
+    function applyFilters(){
+
+    }
 
     function locationFilters(){
 
@@ -173,6 +177,24 @@
         const data = await raw.json();
 
         data.forEach(({ companyId, companyName, county, address, postcode, tel, cuisine, ecobadgeTier, veganDishes, singleUsePlastic, foodWasteCollectionScheme, localProduce }) => {
+            
+            var mustHaves = [veganDishes, singleUsePlastic, foodWasteCollectionScheme, localProduce];
+
+            for(var i = 0; i<4; i++){
+
+                if (mustHaves[i] == true){
+                    mustHaves[i] = '<i data-feather="check"></i>';
+                }
+                else{
+                    mustHaves[i] = '<i data-feather="x"></i>';
+                }
+            }
+
+            veganDishes = mustHaves[0];
+            singleUsePlastic = mustHaves[1];
+            foodWasteCollectionScheme = mustHaves[2];
+            localProduce = mustHaves[3];
+
             $("#businesses").find('tbody').append(`<tr id="${companyId}" class="js-file-line">
                 <td>${companyName}</td>
                 <td>${county}</td>
@@ -180,17 +202,19 @@
                 <td>${postcode}</td>
                 <td>${tel}</td>
                 <td>${ecobadgeTier}</td>
-                <td style="text-align:center"></td>
-                <td>${veganDishes}</td>
-                <td>${singleUsePlastic}</td>
-                <td>${foodWasteCollectionScheme}</td>
-                <td>${localProduce}</td>
+                <td></td>
+                <td style="text-align:center">${veganDishes}</td>
+                <td style="text-align:center">${singleUsePlastic}</td>
+                <td style="text-align:center">${foodWasteCollectionScheme}</td>
+                <td style="text-align:center">${localProduce}</td>
                 </tr>`);
 
             if (!locations.includes(county)){
                 locations.push(county);
             }
         });
+
+        feather.replace()
     }
 
     async function fetchCuisines() {
@@ -203,7 +227,6 @@
         data.forEach(({cuisineId, cuisineName }) => {
             cuisines[cuisineId] = cuisineName;
         });
-        console.table(cuisines);
     }
 
     async function fetchCompanyCuisines(){
