--- a/Ecobadge Website/Ecobadge Website/Pages/Business.cshtml
+++ b/Ecobadge Website/Ecobadge Website/Pages/Business.cshtml
@@ -10,115 +10,40 @@
 
 
 <div class="container wrapper">
+    <h3 class="text-center">Business Profile</h3>
     <div class="row">
+        <div class="col-4 image-container">
+            --Image Placeholder--
+        </div>
 
-        <div class="col-12 text-container">
-            <div class="text-center text-header" style="padding-bottom:15px">Meet the team</div>
+        <div class="col-8 text-container">
+            <div class=""> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fringilla blandit mauris, sit amet gravida erat sodales in. Nunc rutrum blandit augue, a dictum nibh dictum quis. Quisque pretium lorem consectetur orci placerat sodales. Aliquam id elit libero. Duis in ex nisi. Praesent a risus est. In et pharetra erat. In condimentum, mi ut placerat dapibus, arcu nunc sagittis sem, non euismod eros libero id ex. Donec ut pharetra risus. Duis fringilla est et cursus ultrices. Nulla mollis nec metus sed elementum. Phasellus et odio eget elit euismod dictum.</div>
+        </div>
+    </div>
+    <br>
 
-            <div class="row">
-                <div class="col-3">
-                    <div class="row">
-                        <div class="col-12">
-                            <img src="https://www.wrappixel.com/demos/ui-kit/wrapkit/assets/images/team/t1.jpg" alt="image" class="img-fluid rounded-circle" />
-                        </div>
-                        <div class="col-md-12 text-center">
-                            <div class="pt-2">
-                                <h5 class="mt-4 font-weight-medium mb-0">Name here</h5>
-                                <h6 class="subtitle mb-3">Job title</h6>
-                                <p>Lorem ipsum blah blah blah</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <div class="text-center text-header" style="">Our Menu</div>
+    <div class="col-12 text-container">
 
-                <div class="col-3">
-                    <div class="row">
-                        <div class="col-12">
-                            <img src="https://www.wrappixel.com/demos/ui-kit/wrapkit/assets/images/team/t1.jpg" alt="image" class="img-fluid rounded-circle" />
-                        </div>
-                        <div class="col-md-12 text-center">
-                            <div class="pt-2">
-                                <h5 class="mt-4 font-weight-medium mb-0">Name here</h5>
-                                <h6 class="subtitle mb-3">Job title</h6>
-                                <p>Lorem ipsum blah blah blah</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-3">
-                    <div class="row">
-                        <div class="col-12">
-                            <img src="https://www.wrappixel.com/demos/ui-kit/wrapkit/assets/images/team/t1.jpg" alt="image" class="img-fluid rounded-circle" />
-                        </div>
-                        <div class="col-md-12 text-center">
-                            <div class="pt-2">
-                                <h5 class="mt-4 font-weight-medium mb-0">Name here</h5>
-                                <h6 class="subtitle mb-3">Job title</h6>
-                                <p>Lorem ipsum blah blah blah</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-3">
-                    <div class="row">
-                        <div class="col-12">
-                            <img src="https://www.wrappixel.com/demos/ui-kit/wrapkit/assets/images/team/t1.jpg" alt="image" class="img-fluid rounded-circle" />
-                        </div>
-                        <div class="col-md-12 text-center">
-                            <div class="pt-2">
-                                <h5 class="mt-4 font-weight-medium mb-0">Name here</h5>
-                                <h6 class="subtitle mb-3">Job title</h6>
-                                <p>Lorem ipsum blah blah blah</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
+        <div class="col-md-12 text-center">
+            <div class="pt-2">
+                <br>
+                <p>Click for full PDF</p>
+                <br>
             </div>
-
         </div>
-
     </div>
-</div>
+    <br>
+    <div class="text-center text-header">Eco Badge Tier</div>
 
-<div class="container wrapper">
     <div class="row">
         <div class="col-4 image-container">
             --Image Placeholder--
         </div>
 
         <div class="col-8 text-container">
-            <div class="text-center text-header">Our Journey</div>
             <div class=""> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fringilla blandit mauris, sit amet gravida erat sodales in. Nunc rutrum blandit augue, a dictum nibh dictum quis. Quisque pretium lorem consectetur orci placerat sodales. Aliquam id elit libero. Duis in ex nisi. Praesent a risus est. In et pharetra erat. In condimentum, mi ut placerat dapibus, arcu nunc sagittis sem, non euismod eros libero id ex. Donec ut pharetra risus. Duis fringilla est et cursus ultrices. Nulla mollis nec metus sed elementum. Phasellus et odio eget elit euismod dictum.</div>
         </div>
-    </div>
-
-    <div class="row">
-
-        <div class="col-8 text-container">
-            <div class="text-center text-header">Our Future Plans</div>
-            <div class=""> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fringilla blandit mauris, sit amet gravida erat sodales in. Nunc rutrum blandit augue, a dictum nibh dictum quis. Quisque pretium lorem consectetur orci placerat sodales. Aliquam id elit libero. Duis in ex nisi. Praesent a risus est. In et pharetra erat. In condimentum, mi ut placerat dapibus, arcu nunc sagittis sem, non euismod eros libero id ex. Donec ut pharetra risus. Duis fringilla est et cursus ultrices. Nulla mollis nec metus sed elementum. Phasellus et odio eget elit euismod dictum.</div>
-        </div>
-
-        <div class="col-4 image-container">
-            --Image Placeholder--
-        </div>
-    </div>
-</div>
-
-<div class="container wrapper">
-    <div class="row">
-
-        <div class="col-6">
-            <button type="button" class="btn btn-success btn-lg btn-block" data-toggle="modal" data-target="#subscribe">Subscribe to our Newsletter</button>
-        </div>
-
-        <div class="col-6">
-            <button type="button" class="btn btn-success btn-lg btn-block" data-toggle="modal" data-target="#contact">Contact us</button>
-        </div>
-
     </div>
 </div>
 
@@ -170,36 +95,6 @@
                 <div class="d-flex justify-content-center" style="padding:15px">
                     <button type="button" class="btn btn-dark" style="width:40%">Submit</button>
                 </div>
-
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<div class="modal fade" id="subscribe" tabindex="-1" role="dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header text-center">
-                <h5 class="modal-title w-100">Subscribe to our Newsletter</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-
-            <div class="modal-body">
-
-                <div class="input-group input-group-lg mx-auto">
-                    <input type="email" class="form-control" placeholder="Email" id="nlEmail">
-                    <div class="input-group-append">
-                        <button class="btn btn-primary btn-dark" type="button" id="nlBtn">SUBMIT</button>
-                    </div>
-                </div>
-
-                <small class="text-muted">
-                    By pressing SUBMIT, I consent to my email address being used for marketing and
-                    promotional reasons, and subscribe to the ECO Badge mailing list.
-                </small>
 
             </div>
         </div>
