Finished Business Profile and User Profile
changed cshtml names to reflect page names

Business -> BusinessProfile

and finished the User Profile layout

--- a/Ecobadge Website/Ecobadge Website/Pages/BusinessProfile.cshtml
+++ b/Ecobadge Website/Ecobadge Website/Pages/BusinessProfile.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
-@model Ecobadge_Website.Pages.BusinessModel
+@model Ecobadge_Website.Pages.BusinessProfileModel
 @{
     ViewData["Title"] = "Business Profile";
 }
 
 @section Styles {
-    <link href="@Url.Content("~/css/business.css")" rel="stylesheet" type="text/css"/>
+    <link href="@Url.Content("~/css/businessprofile.css")" rel="stylesheet" type="text/css"/>
 }
 
 
