Can click on directory items to open Business profiles

--- a/Ecobadge Website/Ecobadge Website/Pages/BusinessProfile.cshtml
+++ b/Ecobadge Website/Ecobadge Website/Pages/BusinessProfile.cshtml
@@ -1,7 +1,7 @@
-﻿@page
+﻿@page "{id?}"
 @model Ecobadge_Website.Pages.BusinessProfileModel
 @{
-    ViewData["Title"] = "Business Profile";
+    ViewData["Title"] = "Business";
 }
 
 @section Styles {
