--- a/Ecobadge Website/Ecobadge Website/Pages/Directory.cshtml
+++ b/Ecobadge Website/Ecobadge Website/Pages/Directory.cshtml
@@ -318,7 +318,7 @@
             foodWasteCollectionScheme = mustHaves[2];
             localProduce = mustHaves[3];
 
-            $("#businesses").find('tbody').append(`<tr id="${companyId}" class="js-file-line">
+            $("#businesses").find('tbody').append(`<tr id="${companyId}" class="js-file-line" onclick="location.href = '@(Url.Page("BusinessProfile", new { id = "Business"}))?id=' + ${companyId}">
                 <td>${companyName}</td>
                 <td>${county}</td>
                 <td>${address}</td>
