More defined comments for About us and Home Pages

--- a/Ecobadge Website/Ecobadge Website/Pages/Index.cshtml
+++ b/Ecobadge Website/Ecobadge Website/Pages/Index.cshtml
@@ -15,8 +15,10 @@
     </div>
 
     <div class="col-9 info-container">
+        @*//--------------------------------------------------------eco-councious community--------------------------------------------------------*@
         <div class="text-center info-title">Supporting an eco-conscious community</div>
-            
+
+        @*//--------------------------------------------------------eco-concious community textblock--------------------------------------------------------*@
         <span>
             ECO Badge is a certification platform which scores food establishments (restaurants,
             cafe, cafeterias, takeaways) based on their environmental impact, providing
@@ -41,7 +43,7 @@
 </div>
 
 <div class="container text-center tiers-wrapper">
-
+    @*//--------------------------------------------------------Our Tiers--------------------------------------------------------*@
     <div class="wrapper">
         <h1>Our Tiers</h1>
     </div>
@@ -52,7 +54,7 @@
             <p>The Lowest Tier</p>
         </div>
         <div class="col-sm-2">
-            <img src="assets/seedling@4x.png"  class="img-fluid" style="width:100%" alt="Image">
+            <img src="assets/seedling@4x.png" class="img-fluid" style="width:100%" alt="Image">
             <p>The Second Lowest Tier</p>
         </div>
         <div class="col-sm-2">
