--- a/Ecobadge Website/Ecobadge Website/Pages/Directory.cshtml
+++ b/Ecobadge Website/Ecobadge Website/Pages/Directory.cshtml
@@ -337,7 +337,7 @@
             }
         });
         
-        feather.replace()
+        feather.replace();
     }
 
     async function fetchCuisines() {
